--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
         completions."
     </string>
     <string name="application_authorization_error">Application authorization error has occured</string>
+    <string name="repos">Repositories</string>
 </resources>
