Add kotlin files for models

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="incorrect_login_or_password">Incorrect login or password</string>
     <string name="ok">ok</string>
     <string name="during_load_repos_error_has_occured">During load repos error has occured</string>
+    <string name="forks">forks</string>
+    <string name="watches">watches</string>
 </resources>
